--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -52,6 +52,10 @@
     display: none;
 }
 
+.govuk-accordion .govuk-accordion__section-button {
+    font-family: $govuk-font-family;
+}
+
 
 
 /* css-tag (inline solid title block) #start ****** */
