Changes to kaminari partials to match ccs pagination component

--- a/app/views/ccs_patterns/home/numbered_pagination.html.erb
+++ b/app/views/ccs_patterns/home/numbered_pagination.html.erb
@@ -9,6 +9,8 @@
 
             <p class="govuk-body"><b>Note aria</b>: aria-label="Pagination Navigation", aria-current="true"</p>
 
+            <p class="govuk-body"><b>Note Rails</b>: paginate @suppliers, views_prefix: 'shared', window: 0, outer_window: 2
+
             <p class="govuk-body"><i>(&quot;When we get to mid-way through the page numbers, we can start to do what GDS do and bring in ellipsising before and after&quot;). Working out what logic you wish to use depends upon your scenario, but all the HTML required for the various options are here.</i></p>
 
         </div>
