--- a/app/views/shared/kaminari/_last_page.html.erb
+++ b/app/views/shared/kaminari/_last_page.html.erb
@@ -6,6 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="last">
-  <%= link_to_unless current_page.last?, t('views.pagination.last').html_safe, url, remote: remote %>
-</li>
+<!--<li class="ccs-last">-->
+  <%#= link_to_unless current_page.last?, t('views.pagination.last').html_safe, url, remote: remote %>
+<!--</li>-->
