--- a/app/views/shared/kaminari/_first_page.html.erb
+++ b/app/views/shared/kaminari/_first_page.html.erb
@@ -6,6 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="first">
-  <%= link_to_unless current_page.first?, t('views.pagination.first').html_safe, url, remote: remote %>
-</li>
+<!--<li class="ccs-first">-->
+  <%#= link_to_unless current_page.first?, t('views.pagination.first').html_safe, url, remote: remote %>
+<!--</li>-->
