--- a/app/views/shared/kaminari/_page.html.erb
+++ b/app/views/shared/kaminari/_page.html.erb
@@ -7,6 +7,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="page<%= ' current' if page.current? %>">
-  <span><%= link_to_unless page.current?, page, url, {remote: remote, rel: page.rel} %></span>
+<li>
+  <%= link_to page, url, {remote: remote, rel: page.rel, aria: {current: ("true" if page.current?)}} %>
 </li>
