updated global ccs css

--- a/app/views/ccs_patterns/home/table_5050.html.erb
+++ b/app/views/ccs_patterns/home/table_5050.html.erb
@@ -1,11 +1,9 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-m">5050 table</h1>
-            <p class="govuk-body">Example HTML showing a CCS pattern for a table split with two equal coloumns (50/50). Two seperate tables/examples are shown.</p>
+            <p class="govuk-body">Example HTML showing a CCS pattern for a table split with two equal coloumns (50/50). Two seperate tables/examples are shown. Uses standard GDS markup with additional parent CCS classes.</p>
 
             <p class="govuk-body"><b>Note</b> classes: .ccs-at-govuk-table--sm, .ccs-at-govuk-table--5050, .ccs-remove</p>
-
-
 
         </div>
     </div>
