--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -577,3 +577,30 @@ ul.ccs-pagination {
         width: 50%; //for dfe logo (or similar when required)
     }
 }
+
+/* ccs table styles starts */
+table.ccs-at-govuk-table--sm {
+    th {
+        @include govuk-font($size: 16, $weight: inherit);
+    }
+    td {/*@include govuk-font($size: 14, $weight: inherit); */
+        font-size: 15px;
+        font-size: 0.9rem;
+    }
+}
+table.ccs-at-govuk-table--5050 {//works on two col tables
+    tr th:first-child,
+    tr td:first-child {
+        width: 50%;
+        padding-right: govuk-spacing(2);
+    }
+}
+table.ccs-at-govuk-table--sm,
+table.ccs-at-govuk-table--5050 {
+    th, td {
+        padding-top: govuk-spacing(3);
+        padding-bottom: govuk-spacing(3);
+        vertical-align: top;
+    }
+}
+/* ccs table styles ends */
