navigation changes now new pages have been added

--- a/app/views/facilities_management/buildings/buildings.html.erb
+++ b/app/views/facilities_management/buildings/buildings.html.erb
@@ -6,4 +6,10 @@
       <%= render('facilities_management/buildings/building_list') %>
     </div>
   </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full govuk-!-margin-top-6">
+      <a id="fm-buildings-continue" href="/facilities-management/contract-start"
+         class="govuk-button ccs-no-print" role="button">Continue</a>
+    </div>
+  </div>
 </div>
