--- a/app/views/facilities_management/buildings/_building_list.html.erb
+++ b/app/views/facilities_management/buildings/_building_list.html.erb
@@ -92,14 +92,20 @@
               </div>
             </div>
           </div>
+        </div>
       <% end %>
-      </div>
     </div>
   </div>
 </div>
-<div>
-  <a id="fm-buildings-continue" href="buildings/new-building" class="govuk-button ccs-no-print" role="button">+ Add a
-    building
-  </a>
+</div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full govuk-!-margin-top-6 govuk-!-margin-left-4">
+    <div>
+      <a id="fm-buildings-add-building" href="buildings/new-building" class="govuk-link--no-visited-state ccs-no-print" role="button">+
+        Add a
+        building
+      </a>
+    </div>
+  </div>
 </div>
 
