FM fix back button links

--- a/app/views/facilities_management/buildings/select_services_per_building.html.erb
+++ b/app/views/facilities_management/buildings/select_services_per_building.html.erb
@@ -1,7 +1,7 @@
 <div class="govuk-body">
   <div class="govuk-grid-row">
     <div class="govuk-!-width-three-quarters">
-      <a href="new-building" class="govuk-back-link">Back</a>
+      <a href="<%= request.referer %>" class="govuk-back-link">Back</a>
     </div>
   </div>
   <div class="govuk-!-width-three-quarters">
