--- a/app/views/facilities_management/contract/start_of_contract.html.erb
+++ b/app/views/facilities_management/contract/start_of_contract.html.erb
@@ -1,4 +1,4 @@
-<a href="#" onclick="window.history.go(-1); return false;" class="govuk-back-link govuk-!-margin-bottom-7">Back</a>
+<a href="<%= request.referer %>" class="govuk-back-link">Back</a>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
