--- a/app/views/facilities_management/select_services/select_services.html.erb
+++ b/app/views/facilities_management/select_services/select_services.html.erb
@@ -1,5 +1,4 @@
-<a href="/facilities-management/select-locations" class="govuk-back-link">Back</a>
-
+<a href="<%= request.referer %>" class="govuk-back-link">Back</a>
 <%= render('errors/inline_error_summary') %>
 
 <div>
