--- a/app/views/facilities_management/buildings/new_building.html.erb
+++ b/app/views/facilities_management/buildings/new_building.html.erb
@@ -1,7 +1,7 @@
 <div class="govuk-body">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <a href="/facilities-management/select-locations" class="govuk-back-link">Back</a>
+      <a href="<%= request.referer %>" class="govuk-back-link">Back</a>
     </div>
   </div>
   <div class="govuk-grid-row">
