--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -1,4 +1,4 @@
-<a href="/facilities-management" class="govuk-back-link">Back</a>
+<a href="<%= request.referer %>" class="govuk-back-link">Back</a>
 
 <%= render('errors/inline_error_summary') %>
 
