--- a/app/views/facilities_management/long_list/long_list.html.erb
+++ b/app/views/facilities_management/long_list/long_list.html.erb
@@ -36,6 +36,8 @@
     </div>
 
     <a id="suppliers-continue-button" href="/facilities-management/standard-contract/questions" class="govuk-button ccs-no-print" role="button">Continue</a><br>
+    <a id="suppliers-summary-button" href="/facilities-management/summary" class="govuk-button ccs-no-print" role="button">XX Summary</a><br>
+
     <p>
       <a id="FM-print-supplier-list" role="button" class="supplier-record__print-option ccs-no-print" href="" >Print this page</a>
     </p>
