completed errors wip

--- a/app/views/ccs_patterns/home/index.html.erb
+++ b/app/views/ccs_patterns/home/index.html.erb
@@ -18,6 +18,17 @@
       </ul>
 
 
+      <hr style="margin: 30px 0 100px 0;">
+
+
+      <p class="govuk-body">AT HTML: Error message examples...</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/ccs-patterns/errors-find-apprentices">find_apprentices (Legend)</a></li>
+        <li><a href="/ccs-patterns/errors-find-apprentices3">find_apprentices3 (Label)</a></li>
+      </ul>
+
+
 
     </div>
   </div>
