--- a/app/views/ccs_patterns/home/index.html.erb
+++ b/app/views/ccs_patterns/home/index.html.erb
@@ -25,7 +25,10 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/ccs-patterns/errors-find-apprentices">find_apprentices (Legend)</a></li>
+        <li><a href="/ccs-patterns/errors-find-apprentices2">find_apprentices2 (Legend)</a></li>
         <li><a href="/ccs-patterns/errors-find-apprentices3">find_apprentices3 (Label)</a></li>
+        <li><a href="/ccs-patterns/errors-find-apprentices4">find_apprentices4 (Tabs: input &amp; checkboxes)</a></li>
+        <li><a href="/ccs-patterns/errors-require">xxxxx</a></li><!-- relates to requirements -->
       </ul>
 
 
