--- a/app/views/ccs_patterns/home/errors_find_apprentices2.html.erb
+++ b/app/views/ccs_patterns/home/errors_find_apprentices2.html.erb
@@ -1,6 +1,6 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-m">Example of error messages HTML</h1>
+      <h1 class="govuk-heading-m">Example of error message state HTML</h1>
 
       <p><b>Note</b> classes: .govuk-form-group--error, .govuk-error-message</p>
 
@@ -20,33 +20,33 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="" method="">
+      <form action="find_apprentices3" method="">
 
         <div class="govuk-form-group govuk-form-group--error">
-          <fieldset class="govuk-fieldset" aria-describedby="ap-error">
+          <fieldset class="govuk-fieldset govuk-form-group--error" aria-describedby="ap-have-error">
 
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-font-weight-bold">
               <h1 class="govuk-fieldset__heading">
-                Do you know the apprenticeship standard that you would like training for?
+                Does your organisation have a Digital Apprenticeship Service (DAS) account?
               </h1>
             </legend>
 
-            <span id="ap-error" class="govuk-error-message">
-              <span class="govuk-visually-hidden">Error:</span> Select yes if you know the apprenticeship standard that you would like training for
+            <span id="ap-have-error" class="govuk-error-message">
+              <span class="govuk-visually-hidden">Error:</span> Select yes if your organisation have a DAS account
             </span>
 
             <div class="govuk-radios">
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="ap-std-1" name="ap-std" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="ap-std-1">
-                        Yes
+                <input class="govuk-radios__input" id="ap-have-das-1" name="ap-have-das" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="ap-have-das-1">
+                    Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="ap-std-2" name="ap-std" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="ap-std-2">
-                  No
+                <input class="govuk-radios__input" id="ap-have-das-2" name="ap-have-das" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="ap-have-das-2">
+                    No
                 </label>
               </div>
 
@@ -59,5 +59,5 @@
 
       </form>
 
-     </div>
+    </div>
   </div>
