FM bug fixes various

--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -76,7 +76,7 @@
   <div class="filter-selection">
     <header>
       <div class="filter-selection__header">
-        <a id="remove-all-link" name="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
+        <a id="remove-all-locations-link" name="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
         <h2 class="font-weight-700">
           <span id="selected-location-count" class="font-size--18">0</span>
           Locations selected
