--- a/app/views/facilities_management/select_services/select_services.html.erb
+++ b/app/views/facilities_management/select_services/select_services.html.erb
@@ -56,7 +56,7 @@
   <div class="filter-selection">
     <header>
       <div class="filter-selection__header">
-        <a id="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
+        <a id="remove-all-services-link" class="remove-all js-filter" href="">Remove all</a>
         <h2 class="font-weight-700">
           <span id="selected-service-count" class="font-size--18">0</span>
           Services selected
