--- a/app/views/apprenticeships/home/index.html.erb
+++ b/app/views/apprenticeships/home/index.html.erb
@@ -34,8 +34,7 @@
           <%= t('.this_service_generate_shortlist_html') %>
         </strong>
       </div>
-
-      <%= link_to t('common.continue'), '/apprenticeships/find_apprentices' , role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('common.continue') %>
+    <%= link_to 'Start now', journey_start_path(journey: Apprenticeships::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
     </div>
   </div>
