FM contract start date validation change

--- a/app/views/facilities_management/contract/start_of_contract.html.erb
+++ b/app/views/facilities_management/contract/start_of_contract.html.erb
@@ -18,7 +18,7 @@
           </legend>
 
           <span id="start-hint" class="govuk-hint">
-                        For example, <time datetime="2019-09-28">28 09 2019</time>
+                        For example, <time datetime="2025-09-28">28 09 2025, and must not be in the past</time>
                     </span>
 
           <span id="fm-contract-start-error-message" class="govuk-error-message govuk-visually-hidden">
