--- a/app/views/supply_teachers/admin/uploads/index.html.erb
+++ b/app/views/supply_teachers/admin/uploads/index.html.erb
@@ -7,19 +7,19 @@
     <% @uploads.each do |upload| %>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
-          <%= link_to upload.current_accredited_suppliers.file.filename, upload.current_accredited_suppliers_url %>
+          <%= link_to upload.current_accredited_suppliers.file.try(:filename), upload.current_accredited_suppliers_url %>
           <br>
-          <%= link_to upload.geographical_data_all_suppliers.file.filename, upload.geographical_data_all_suppliers_url %>
+          <%= link_to upload.geographical_data_all_suppliers.file.try(:filename), upload.geographical_data_all_suppliers_url %>
           <br>
-          <%= link_to upload.lot_1_and_lot_2_comparisons.file.filename, upload.lot_1_and_lot_2_comparisons_url %>
+          <%= link_to upload.lot_1_and_lot_2_comparisons.file.try(:filename), upload.lot_1_and_lot_2_comparisons_url %>
           <br>
-          <%= link_to upload.master_vendor_contacts.file.filename, upload.master_vendor_contacts_url %>
+          <%= link_to upload.master_vendor_contacts.file.try(:filename), upload.master_vendor_contacts_url %>
           <br>
-          <%= link_to upload.neutral_vendor_contacts.file.filename, upload.neutral_vendor_contacts_url %>
+          <%= link_to upload.neutral_vendor_contacts.file.try(:filename), upload.neutral_vendor_contacts_url %>
           <br>
-          <%= link_to upload.pricing_for_tool.file.filename, upload.pricing_for_tool_url %>
+          <%= link_to upload.pricing_for_tool.file.try(:filename), upload.pricing_for_tool_url %>
           <br>
-          <%= link_to upload.supplier_lookup.file.filename, upload.supplier_lookup_url %>
+          <%= link_to upload.supplier_lookup.file.try(:filename), upload.supplier_lookup_url %>
         </div>
       </div>
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
